src/test/deca/context/valid/created/unary-not-bool.deca
//Description :
// Test du not unaire
//
// Resultats :
//


{
    !true;
}
