src/test/deca/context/invalid/created/unary-not-int.deca
//Description :
// Test du not unaire sur un entier
//
// Resultats :
// Erreur

{
    !12;
}
